--- a/variables and datatypes/practice.html
+++ b/variables and datatypes/practice.html
@@ -6,10 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    Conditions Statements 
+    All practice Questions 
 </body>
-<script src="condition.js"></script>
-<script src="function.js"></script>
-<script src="foreach.js"></script>
-<script src="arrmethods.js"></script>
-</html> 
+<script src="practice_1.js"></script>
+</html>
